; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-numeric-ext/src/extr_numeric_ext.c_mrb_int_chr.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-numeric-ext/src/extr_numeric_ext.c_mrb_int_chr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CHAR_BIT = common dso_local global i32 0, align 4
@E_RANGE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"%S out of char range\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_int_chr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_int_chr(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @to_int(i32* %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @CHAR_BIT, align 4
  %12 = shl i32 1, %11
  %13 = icmp sge i32 %10, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @E_RANGE_ERROR, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @mrb_raisef(i32* %15, i32 %16, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %17)
  br label %19

19:                                               ; preds = %14, %2
  %20 = load i32, i32* %5, align 4
  %21 = trunc i32 %20 to i8
  store i8 %21, i8* %6, align 1
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @mrb_str_new(i32* %22, i8* %6, i32 1)
  ret i32 %23
}

declare dso_local i32 @to_int(i32*, i32) #1

declare dso_local i32 @mrb_raisef(i32*, i32, i8*, i32) #1

declare dso_local i32 @mrb_str_new(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
